--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://luponetn.github.io/wickii",
+  "homepage": "https://luponetn.github.io/Wickii",
   "name": "wickii",
   "private": true,
   "version": "0.0.0",
